<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="image0" />
    <string name="image1" />
    <string name="image2" />
    <string name="image3" />
    <string name="image4" />
    <string name="image5" />
    <string name="image6" />
    <string name="image7" />
    <string name="image8" />
    <string name="reset_btn">Reset</string>
    <string name="title_textView">Tic Tac Toe</string>
    <string name="resume_btn">Resume Game</string>
    <string name="new_btn">New Game</string>
    <string name="back_btn" />
</resources>
