<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#599CE8"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:columnCount="3"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541">


        <ImageView
            android:id="@+id/image0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#3C51CD"
            android:text="@string/image0"
            android:tag="0"/>

        <ImageView
            android:id="@+id/image1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#3C51CD"
            android:text="@string/image1"
            android:tag="1"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="#3C51CD"
            android:text="@string/image2"
            android:tag="2"/>

        <ImageView
            android:id="@+id/image3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#3C51CD"
            android:text="@string/image3"
            android:tag="3"/>

        <ImageView
            android:id="@+id/image4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:background="#3C51CD"
            android:text="@string/image4"
            android:tag="4"/>

        <ImageView
            android:id="@+id/image5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:background="#3C51CD"
            android:text="@string/image5"
            android:tag="5"/>

        <ImageView
            android:id="@+id/image6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:background="#3C51CD"
            android:text="@string/image6"
            android:tag="6"/>

        <ImageView
            android:id="@+id/image7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:background="#3C51CD"
            android:text="@string/image7"
            android:tag="7"/>

        <ImageView
            android:id="@+id/image8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:background="#3C51CD"
            android:text="@string/image8"
            android:tag="8"/>
    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tic Tac Toe"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/GridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GridLayout"
        app:layout_constraintVertical_bias="0.41" />

</androidx.constraintlayout.widget.ConstraintLayout>